Bug #4288 prepared statement 'show table status ..', wrong output on execute
Submitted: 25 Jun 2004 19:30 Modified: 27 Jun 2004 1:43
Reporter: Matthias Leich Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1 OS:Linux (Linux)
Assigned to: Oleksandr Byelkin Target Version:

[25 Jun 2004 19:30] Matthias Leich
Description:
If I execute a prepared "show table status from test like 't1%' " 
I get the wrong output:
  Tables_in_test (t1%)
  t1

I expect the output of the non prepared statement:
Something like:
  Name	Engine	Version	Row_format	Rows	...
  t1	MyISAM	9	Dynamic	0	0	... 

BTW: The bug must be a result of the recent code changes, because the
     test case worked OK two weeks ago.

     I assume the problematic code was injected between  
     ChangeSet@1.1912.1.1, 2004-06-10 --> all is OK 
     ChangeSet@1.2003, 2004-06-25     --> the bug

My environment: Intel PC with Linux(SuSE 9.0),
   MySQL 4.1 source distrib.(last bk pull 2004-06-25)

How to repeat:
How to repeat:
Please use my test file, copy it to mysql-test/t
  ./mysql-test-run ml_err8
[25 Jun 2004 19:32] Matthias Leich
test case

Attachment: ml_err9.test (application/octet-stream, text), 552 bytes.

[26 Jun 2004 0:29] Oleksandr Byelkin
ChangeSet 
  1.2007 04/06/26 01:28:08 bell@sanja.is.com.ua +4 -0 
  removed using lex->select_lex.options is SHOW TABLE [STATUS] commands 
(BUG#4288)
[27 Jun 2004 1:43] Sergei Golubchik
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

fixed in 4.1.3