removed using lex->select_lex.options is SHOW TABLE [STATUS] commands (BUG#4288)